crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__next_trigger_enabled.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).next_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "next-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Next slide",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
