crates/ars-components/src/layout/carousel/snapshots/ars_components__layout__carousel__tests__root_vertical.snap
---
source: crates/ars-components/src/layout/carousel/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-orientation",
            ),
            String(
                "vertical",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "carousel",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Carousel",
            ),
        ),
        (
            Aria(
                RoleDescription,
            ),
            String(
                "carousel",
            ),
        ),
        (
            Role,
            String(
                "region",
            ),
        ),
    ],
    styles: [],
}
